<resources>
    <string name="app_name">Nairu</string>
    <string name="email_hint">Email ...</string>
    <string name="pass_hint">Password ...</string>
    <string name="btn_Login">Sign in</string>
    <string name="logo_desc">Login Image</string>
    <string name="bottom_join_text">Join</string>
    <string name="bottom_profile_text">My profile</string>
    <string name="bottom_history_text">History</string>
    <string name="bottom_quiz_text">Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="etSessionPin">Session Pin ...</string>
    <string name="btnJoin">Join</string>
    <string name="content_img_Welcome">Welcome for user</string>
    <string name="FirstName">First Name:</string>
    <string name="LastName">Last Name:</string>
    <string name="Series">Series:</string>
    <string name="Group">Group:</string>
    <string name="UserImage">Image for user\'s profile</string>
    <string name="buttonCreateQuiz">New quiz</string>
    <string name="TestName">Name:</string>
    <string name="TestCategory">Category:</string>
    <string name="TestDuration">Duration:</string>
    <string name="TestnoQuestionsNumber">Questions no: </string>
    <string name="TestRetries">Retries:</string>
    <string name="TestBackwards">Backwards:</string>
    <string name="TestPrivacy">Privacy:</string>
    <string name="SelectCategory">Select category...</string>
    <string name="TestNameHint">Type test name...</string>
    <string name="TestDurationHint">Type test duration...</string>
    <string name="TestQuestionsNoHint">Type number...</string>
    <string name="TestRetriesNo">Type retries number...</string>
    <string name="YesValue">Yes</string>
    <string name="NoValue">No</string>
    <string name="PublicValue">Public</string>
    <string name="PrivateValue">Private</string>
    <string name="ButtonAdd">Add</string>
    <string name="itmTest">Test</string>
    <string name="CreateTestButton">Create Test</string>
    <string name="QuestionLabel">Question</string>
    <string name="CloseButton">X</string>
    <string name="Question">Type your question...</string>
    <string name="AnswerHint">Type your answer...</string>
    <string name="Answer1">Answer 1:</string>
    <string name="Answer2">Answer 2:</string>
    <string name="Answer3">Answer 3:</string>
    <string name="Answer4">Answer 4:</string>
    <string name="btnSave">Save</string>
    <string name="CorrectAnswerLabel">Correct answer</string>
    <string name="FeedbackLabel">Feedback</string>
    <string name="DurationLabel">Duration</string>
    <string name="MultipleLabel">Multiple choice</string>
    <string name="OpenLabel">Open</string>
    <string name="TestQuestionsLabel">Test questions</string>
    <string name="OtherQuestionsLabel">Other questions</string>
    <string name="DescriptionLabel">Description</string>
    <string name="DescriptionHint">Type description...</string>
    <string name="FeedbackHint">Type feedback...</string>
    <string name="TeamLogo">Logo of our team</string>
    <string name="SelectTestLabel">Selected test</string>
    <string name="SelectSDateLabel">Select start date</string>
    <string name="SelectEDateLabel">Select end date</string>
    <string name="OpenCalendar">Open calendar</string>
    <string name="StartHourLabel">Start hour</string>
    <string name="EndHourLabel">End hour</string>
    <string name="egHourStart">Time format: HH:mm e.g 13:30</string>
    <string name="egHourEnd">Time format: HH:mm e.g 14:50</string>
    <string name="QuestionDurationHint">Type duration in minutes...</string>
    <string name="TestQuestionFeedback">Type feedback...</string>
    <string name="CategoryLabel">Category</string>
    <string name="CreateSession">Create session</string>
    <string name="Sessions">Sessions</string>
    <string name="ScoreLabel">Score:</string>
    <string name="GivenLabel">Given</string>
    <string name="OpenQuestions">Open question</string>
    <string name="StopSession">Force stop session</string>
    <string name="DeleteSession">Delete session</string>
    <string name="DetailedActivityStartDate">Start Date:</string>
    <string name="DetailedActivityEndDate">End Date:</string>
    <string name="ReadyLabel">Ready?</string>
    <string name="btnStart">Start</string>
    <string name="selectAnswerLabel">What do you choose?</string>
    <string name="AnswerA">Answer A</string>
    <string name="AnswerB">Answer B</string>
    <string name="AnswerC">Answer C</string>
    <string name="AnswerD">Answer D</string>
    <string name="btnSubmit">Submit</string>
    <string name="expiredTime">Time expired. Your progress was saved. Check your results.</string>
    <string name="btnOk">OK</string>
    <string name="WelcomeText">Welcome</string>
</resources>
